<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/vg_case"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">
        <EditText
            android:id="@+id/et_jug_1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/jug_1"
            android:text="4"/>
        <EditText
            android:id="@+id/et_jug_2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/jug_2"
            android:text="7"/>
        <EditText
            android:id="@+id/et_target"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/target"
            android:text="5"/>

        <TextView
            android:id="@+id/button_simulate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:text="@string/simulate"
            android:padding="8dp"
            android:foreground="?attr/selectableItemBackground"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/recycler_view_simulation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:clipToPadding="false" />
</LinearLayout>

